--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OMG</title>
+    <title>Моя самая лучшая страница</title>
 </head>
 <body>
-    <h1>Глава первая.</h1>
-    <p>О <b>жизни</b> веб-дизайнера.Совсем недавно такой профессии не
-        сущевствовало.А теперь спустя каких то 30 лет, с момента
-        изобретения веба, я могу работать</p>
-    <p> из любой точки мира или
-        в офисах с пинг понгом и плейстейшн.Мой путь как
-        программиста... ой... веб дизайнера начался с... &#128934;</p> 
-    <h5>Нажми сюда чтобы узнать продолжение.</h5>
-    <img src="pic.jpg" alt="это я в детстве">
+    <h1>
+        Всем привет
+    </h1>
     <h5>
-        <a href="about_me.html">Нажми сюда чтобы узнать продолжение</a>
+        <a href="dz2.html">Задание урок 2</a>
+    </h5>
+    <h5>
+        <a href="my_webpage.html"></a>
+    </h5>
+    <h5>
+        <a href="lessen5_homework.html">lessen5dz</a>
     </h5>
 </body>
 </html>
