--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
     <h5>
         <a href="lessen5_homework.html">lessen5dz</a>
     </h5>
+    <h1>
+        <a href="navbar.html">navbar</a>
+    </h2>
+    <h1>
+        <a href="dz4.html">dz4</a>
+    </h1>
+    <h1>
+        <a href="sad.html">lessen8</a>
+    </h1>
 </body>
 </html>
