--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
 </head>
 <body>
     <h1>
-        Всем привет
-    </h1>
-    <h5>
         <a href="dz2.html">Задание урок 2</a>
-    </h5>
-    <h5>
+    </h1>
+    <h1>
         <a href="my_webpage.html"></a>
-    </h5>
-    <h5>
+    </h1>
+    <h1>
         <a href="lessen5_homework.html">lessen5dz</a>
-    </h5>
+    </h1>
     <h1>
         <a href="navbar.html">navbar</a>
-    </h2>
+    </h1>
     <h1>
         <a href="dz4.html">dz4</a>
     </h1>
     <h1>
         <a href="sad.html">lessen8</a>
+    </h1>
+    <h1>
+        <a href="dz9.html">dz9</a>
+    </h1>
+    <h1>
+        <a href="dz9_2.html">dz9_2</a>
     </h1>
 </body>
 </html>
